@@ -1,1 +1,0 @@
-hz=100
